...
  Moon,
  Globe,
  Download,
  Clock,
  Lock,
  ChartBar,
  Settings,
  Info,
  TriangleAlert,
  CircleAlert,
  Trash2,
  Repeat,
  List as ListIcon,
...
